--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,25 +3,36 @@
         <title>Article One | Nisha Jagadesh
         </title>
         <meta name ="viewport" content ="width-device-width, initial-scale-1" />
+        <style>
+            .container
+            {
+                max-width: 800px;
+                margin: 0 auto;
+                color: grey;
+                font-family: sans-serif;
+            }
+        </style>
     </head>
         <body>
-            <div>
-                <a href="/">Home</a>
-            </div>
-            <hr/>
-            <h3>
-                Article One
-            </h3>
-            <div>
-                Aug 4 2017
-            </div>
-            <div>
-                <p>
-                    This is the first para
-                </p>
-                <p>
-                    And the second one
-                </p>
+            <div class="container">
+                <div>
+                    <a href="/">Home</a>
+                </div>
+                <hr/>
+                <h3>
+                    Article One
+                </h3>
+                <div>
+                    Aug 4 2017
+                </div>
+                <div>
+                    <p>
+                        This is the first para
+                    </p>
+                    <p>
+                        And the second one
+                    </p>
+                </div>
             </div>
         </body>
 </html>
