--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -8,7 +8,7 @@
             {
                 max-width: 800px;
                 margin: 0 auto;
-                color: grey;
+                color: blue;
                 font-family: sans-serif;
                 padding-left: 20px;
                 padding-right: 20px;
