--- a/ui/index.html
+++ b/ui/index.html
@@ -4,14 +4,23 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/000/066/3c5/011ba79.jpg" class="img-medium"/>
+        <div class ="container">
+            <div class="center">
+                <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/000/066/3c5/011ba79.jpg" class="img-medium"/>
+            </div>
+            <br>
+            <div class="center text-big bold">
+                Hi! This is Nisha. I am your webapp.
+            </div>
+            <h3>Personal</h3>
+            <div>This is Nisha</div>
+            <hr/>
+            <h3>Professional</h3>
+            <div>Managing Director of JASHA</div>
+            <hr/>
+            <div class ="footer"></div>
+            <script type="text/javascript" src="/ui/main.js">
+            </script>
         </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! This is Nisha. I am your webapp.
-        </div>
-        <script type="text/javascript" src="/ui/main.js">
-        </script>
     </body>
 </html>
