--- a/ui/index.html
+++ b/ui/index.html
@@ -18,7 +18,9 @@
             <h3>Professional</h3>
             <div>Managing Director of JASHA</div>
             <hr/>
-            <div class ="footer"></div>
+            <div class ="footer">
+                This button <button id="counter">Click Me!</button> has been clicked <span id="count">0</span> times!
+            </div>
             <script type="text/javascript" src="/ui/main.js">
             </script>
         </div>
