--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
                 <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/000/066/3c5/011ba79.jpg" class="img-medium"/>
             </div>
             <br>
-            <div class="center text-big bold">
+            <div class="center text-small bold">
                 Hi!
             </div>
             <h3>Personal</h3>
