--- a/ui/index.html
+++ b/ui/index.html
@@ -20,16 +20,12 @@
             <hr/>
             <div class ="footer">
                 This button <button id="counter">Click Me!</button> has been clicked <span id="count">0</span> times!
+                <hr/>
+                <input type = "text" id = "name" placeholder="name"></input>
+                <input type="submit" value="Submit" id = "submit_btn"></input>
+                <ul id="nameList">
+                </ul>
             </div>
-            <hr/>
-            <br/>
-            <input type = "text" id = "name" placeholder="name"></input>
-            <input type="submit" vlaue="Submit"></input>
-            <ul>
-                <li>Name1</li>
-                <li>Name2</li>
-                <li>Name3</li>
-            </ul>
             <script type="text/javascript" src="/ui/main.js">
             </script>
         </div>
