--- a/ui/index.html
+++ b/ui/index.html
@@ -18,13 +18,11 @@
             <h3>Professional</h3>
             <div>Managing Director of JASHA</div>
             <hr/>
-            <div class ="footer">
-                This button <button id="counter">Click Me!</button> has been clicked <span id="count">0</span> times!
-                <hr/>
-                <input type = "text" id = "name" placeholder="name"></input>
-                <input type="submit" value="Submit" id = "submit_btn"></input>
+            <div>
+                <input type = "text" id = "username" placeholder="username"></input>
+                <input type="text" id = "password"></input>
+                <input type="submit" id = "submit_btn"
                 <ul id="nameList">
-                </ul>
             </div>
             <script type="text/javascript" src="/ui/main.js">
             </script>
