[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,20 +8,22 @@
             <div class="center">
                 <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/p/2/000/066/3c5/011ba79.jpg" class="img-medium"/>
             </div>
-            <br>
+                <br>
             <div class="center text-small bold">
                 Hi!
             </div>
-            <h3>Personal</h3>
-            <div>This is Nisha</div>
-            <hr/>
-            <h3>Professional</h3>
-            <div>Managing Director of JASHA</div>
-            <hr/>
+                <h3>Personal</h3>
             <div>
-                <input type = "text" id = "username" placeholder="username"></input>
-                <input type="text" id = "password"></input>
-                <input type="submit" id = "submit_btn"
+                This is Nisha
+            </div>
+                <hr/>
+                <h3>Professional</h3>
+            <div>Managing Director of JASHA</div>
+                <hr/>
+            <div>
+                <input type = "text" id = "username" placeholder="username"/>
+                <input type="text" id = "password"/>
+                <input type="submit" id = "submit_btn"/>
                 <ul id="nameList">
             </div>
             <script type="text/javascript" src="/ui/main.js">
