[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -21,11 +21,11 @@
             <div>Managing Director of JASHA</div>
                 <hr/>
             <div>
-                <input type = "text" id = "username" placeholder="username"/>
-                <input type="text" id = "password"/>
-                <input type="submit" id = "submit_btn"/>
-                <ul id="nameList">
+                <input type = "text" id = "username" placeholder="username" />
+                <input type="text" id = "password" />
+                <input type="submit" id = "submit_btn" />
             </div>
+            <div class="footer"></div>
             <script type="text/javascript" src="/ui/main.js">
             </script>
         </div>
